--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@vueuse/core": "^10.0.2",
     "@vueuse/nuxt": "^10.0.2",
     "nuxt": "^3.4.1"
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.5.2"
   }
 }
