--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/devtools": "^0.4.1",
     "@nuxtjs/tailwindcss": "^6.6.6",
     "@types/node": "^18",
+    "@vue/test-utils": "^2.3.2",
     "@vueuse/core": "^10.0.2",
     "@vueuse/nuxt": "^10.0.2",
-    "nuxt": "^3.4.1"
+    "nuxt": "^3.4.1",
+    "vitest": "^0.30.1"
   },
   "dependencies": {
-    "class-variance-authority": "^0.5.2"
+    "@vueuse/integrations": "^10.0.2",
+    "class-variance-authority": "^0.5.2",
+    "fuse.js": "^6.6.2"
   }
 }
